// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MainEditorAssetTree deal with the specific case if drag treeNode into it's chidlren, keep not change 1`] = `
<article
  className="wonder-asset-component"
>
  <div
    className="asset-tree"
  >
    <article
      className="wonder-asset-header"
    >
      <div
        className="asset-header-item"
        onClick={[Function]}
        title="add asset"
      >
        <div
          className="item-canBeClick"
        >
          <img
            src="./public/img/add.png"
          />
        </div>
      </div>
      <div
        className="asset-header-item"
        onClick={[Function]}
        title="remove asset"
      >
        <div
          className="item-notBeClick"
        >
          <img
            src="./public/img/notRemove.png"
          />
        </div>
      </div>
      <div
        className="asset-header-item"
      >
        <div
          className="item-canBeClick"
          title="upload asset"
        >
          <img
            src="./public/img/load.png"
          />
          <input
            className="asset-fileLoad"
            multiple={false}
            onChange={[Function]}
            type="file"
          />
        </div>
      </div>
    </article>
    <article
      className="wonder-asset-assetTree"
    >
      <ul
        className="wonder-tree-node"
      >
        <li>
          <div
            className="item-triangle"
            onMouseDown={[Function]}
          >
            <img
              src="./public/img/down.png"
            />
          </div>
          <img
            className="treeNode-icon"
            src="./public/img/package.png"
          />
          <div
            className="draggable-container select-not-active"
            draggable={true}
            onClick={[Function]}
            onDragEnd={[Function]}
            onDragEnter={[Function]}
            onDragLeave={[Function]}
            onDragOver={[Function]}
            onDragStart={[Function]}
            onDrop={[Function]}
            style={Object {}}
          >
            Assets
          </div>
        </li>
        <ul
          className="wonder-tree-node"
        >
          <li>
            <div
              className="item-triangle"
            />
            <img
              className="treeNode-icon"
              src="./public/img/package.png"
            />
            <div
              className="draggable-container"
              draggable={true}
              onClick={[Function]}
              onDragEnd={[Function]}
              onDragEnter={[Function]}
              onDragLeave={[Function]}
              onDragOver={[Function]}
              onDragStart={[Function]}
              onDrop={[Function]}
              style={Object {}}
            >
              NoName Folder
            </div>
          </li>
        </ul>
      </ul>
    </article>
  </div>
  <article
    className="wonder-asset-assetChildren"
  >
    <article
      className="wonder-asset-folderBox"
      id="folder-4"
      style={
        Object {
          "border": "0px",
        }
      }
    >
      <div
        className="item-ground"
        draggable={true}
        onDragEnd={[Function]}
        onDragEnter={[Function]}
        onDragLeave={[Function]}
        onDragOver={[Function]}
        onDragStart={[Function]}
        onDrop={[Function]}
      />
      <div
        className="box-image"
      >
        <img
          src="./public/img/assetPackage.png"
        />
      </div>
      <div
        className="item-text "
      >
        <span>
          NoName Folder
        </span>
      </div>
    </article>
  </article>
</article>
`;

exports[`MainEditorAssetTree deal with the specific case if drag treeNode into itself, keep not change 1`] = `
<article
  className="wonder-asset-component"
>
  <div
    className="asset-tree"
  >
    <article
      className="wonder-asset-header"
    >
      <div
        className="asset-header-item"
        onClick={[Function]}
        title="add asset"
      >
        <div
          className="item-canBeClick"
        >
          <img
            src="./public/img/add.png"
          />
        </div>
      </div>
      <div
        className="asset-header-item"
        onClick={[Function]}
        title="remove asset"
      >
        <div
          className="item-notBeClick"
        >
          <img
            src="./public/img/notRemove.png"
          />
        </div>
      </div>
      <div
        className="asset-header-item"
      >
        <div
          className="item-canBeClick"
          title="upload asset"
        >
          <img
            src="./public/img/load.png"
          />
          <input
            className="asset-fileLoad"
            multiple={false}
            onChange={[Function]}
            type="file"
          />
        </div>
      </div>
    </article>
    <article
      className="wonder-asset-assetTree"
    >
      <ul
        className="wonder-tree-node"
      >
        <li>
          <div
            className="item-triangle"
            onMouseDown={[Function]}
          >
            <img
              src="./public/img/down.png"
            />
          </div>
          <img
            className="treeNode-icon"
            src="./public/img/package.png"
          />
          <div
            className="draggable-container select-not-active"
            draggable={true}
            onClick={[Function]}
            onDragEnd={[Function]}
            onDragEnter={[Function]}
            onDragLeave={[Function]}
            onDragOver={[Function]}
            onDragStart={[Function]}
            onDrop={[Function]}
            style={Object {}}
          >
            Assets
          </div>
        </li>
        <ul
          className="wonder-tree-node"
        >
          <li>
            <div
              className="item-triangle"
            />
            <img
              className="treeNode-icon"
              src="./public/img/package.png"
            />
            <div
              className="draggable-container"
              draggable={true}
              onClick={[Function]}
              onDragEnd={[Function]}
              onDragEnter={[Function]}
              onDragLeave={[Function]}
              onDragOver={[Function]}
              onDragStart={[Function]}
              onDrop={[Function]}
              style={Object {}}
            >
              NoName Folder
            </div>
          </li>
        </ul>
      </ul>
    </article>
  </div>
  <article
    className="wonder-asset-assetChildren"
  >
    <article
      className="wonder-asset-folderBox"
      id="folder-4"
      style={
        Object {
          "border": "0px",
        }
      }
    >
      <div
        className="item-ground"
        draggable={true}
        onDragEnd={[Function]}
        onDragEnter={[Function]}
        onDragLeave={[Function]}
        onDragOver={[Function]}
        onDragStart={[Function]}
        onDrop={[Function]}
      />
      <div
        className="box-image"
      >
        <img
          src="./public/img/assetPackage.png"
        />
      </div>
      <div
        className="item-text "
      >
        <span>
          NoName Folder
        </span>
      </div>
    </article>
  </article>
</article>
`;

exports[`MainEditorAssetTree fix bug fix show children arrow else, show arrow 1`] = `
<article
  className="wonder-asset-assetTree"
>
  <ul
    className="wonder-tree-node"
  >
    <li>
      <div
        className="item-triangle"
        onMouseDown={[Function]}
      >
        <img
          src="./public/img/down.png"
        />
      </div>
      <img
        className="treeNode-icon"
        src="./public/img/package.png"
      />
      <div
        className="draggable-container"
        draggable={true}
        onClick={[Function]}
        onDragEnd={[Function]}
        onDragEnter={[Function]}
        onDragLeave={[Function]}
        onDragOver={[Function]}
        onDragStart={[Function]}
        onDrop={[Function]}
        style={Object {}}
      >
        Assets
      </div>
    </li>
    <ul
      className="wonder-tree-node"
    >
      <li>
        <div
          className="item-triangle"
          onMouseDown={[Function]}
        >
          <img
            src="./public/img/right.png"
          />
        </div>
        <img
          className="treeNode-icon"
          src="./public/img/package.png"
        />
        <div
          className="draggable-container select-active"
          draggable={true}
          onClick={[Function]}
          onDragEnd={[Function]}
          onDragEnter={[Function]}
          onDragLeave={[Function]}
          onDragOver={[Function]}
          onDragStart={[Function]}
          onDrop={[Function]}
          style={Object {}}
        >
          New Folder
        </div>
      </li>
    </ul>
  </ul>
</article>
`;

exports[`MainEditorAssetTree fix bug fix show children arrow if node->children has no folder node, not show arrow 1`] = `
<article
  className="wonder-asset-assetTree"
>
  <ul
    className="wonder-tree-node"
  >
    <li>
      <div
        className="item-triangle"
        onMouseDown={[Function]}
      >
        <img
          src="./public/img/down.png"
        />
      </div>
      <img
        className="treeNode-icon"
        src="./public/img/package.png"
      />
      <div
        className="draggable-container"
        draggable={true}
        onClick={[Function]}
        onDragEnd={[Function]}
        onDragEnter={[Function]}
        onDragLeave={[Function]}
        onDragOver={[Function]}
        onDragStart={[Function]}
        onDrop={[Function]}
        style={Object {}}
      >
        Assets
      </div>
    </li>
    <ul
      className="wonder-tree-node"
    >
      <li>
        <div
          className="item-triangle"
        />
        <img
          className="treeNode-icon"
          src="./public/img/package.png"
        />
        <div
          className="draggable-container select-active"
          draggable={true}
          onClick={[Function]}
          onDragEnd={[Function]}
          onDragEnter={[Function]}
          onDragLeave={[Function]}
          onDragOver={[Function]}
          onDragStart={[Function]}
          onDrop={[Function]}
          style={Object {}}
        >
          New Folder
        </div>
      </li>
    </ul>
  </ul>
</article>
`;

exports[`MainEditorAssetTree test asse tree node->isShowChildren default node->isShowChildren should be false except root node 1`] = `
<article
  className="wonder-asset-assetTree"
>
  <ul
    className="wonder-tree-node"
  >
    <li>
      <div
        className="item-triangle"
        onMouseDown={[Function]}
      >
        <img
          src="./public/img/down.png"
        />
      </div>
      <img
        className="treeNode-icon"
        src="./public/img/package.png"
      />
      <div
        className="draggable-container select-active"
        draggable={true}
        onClick={[Function]}
        onDragEnd={[Function]}
        onDragEnter={[Function]}
        onDragLeave={[Function]}
        onDragOver={[Function]}
        onDragStart={[Function]}
        onDrop={[Function]}
        style={Object {}}
      >
        Assets
      </div>
    </li>
    <ul
      className="wonder-tree-node"
    >
      <li>
        <div
          className="item-triangle"
          onMouseDown={[Function]}
        >
          <img
            src="./public/img/right.png"
          />
        </div>
        <img
          className="treeNode-icon"
          src="./public/img/package.png"
        />
        <div
          className="draggable-container"
          draggable={true}
          onClick={[Function]}
          onDragEnd={[Function]}
          onDragEnter={[Function]}
          onDragLeave={[Function]}
          onDragOver={[Function]}
          onDragStart={[Function]}
          onDrop={[Function]}
          style={Object {}}
        >
          New Folder
        </div>
      </li>
    </ul>
  </ul>
</article>
`;

exports[`MainEditorAssetTree test asse tree node->isShowChildren test add treeNode to target treeNode target treeNode->isShowChildren should not change 1`] = `
<article
  className="wonder-asset-assetTree"
>
  <ul
    className="wonder-tree-node"
  >
    <li>
      <div
        className="item-triangle"
        onMouseDown={[Function]}
      >
        <img
          src="./public/img/down.png"
        />
      </div>
      <img
        className="treeNode-icon"
        src="./public/img/package.png"
      />
      <div
        className="draggable-container select-active"
        draggable={true}
        onClick={[Function]}
        onDragEnd={[Function]}
        onDragEnter={[Function]}
        onDragLeave={[Function]}
        onDragOver={[Function]}
        onDragStart={[Function]}
        onDrop={[Function]}
        style={Object {}}
      >
        Assets
      </div>
    </li>
    <ul
      className="wonder-tree-node"
    >
      <li>
        <div
          className="item-triangle"
          onMouseDown={[Function]}
        >
          <img
            src="./public/img/right.png"
          />
        </div>
        <img
          className="treeNode-icon"
          src="./public/img/package.png"
        />
        <div
          className="draggable-container"
          draggable={true}
          onClick={[Function]}
          onDragEnd={[Function]}
          onDragEnter={[Function]}
          onDragLeave={[Function]}
          onDragOver={[Function]}
          onDragStart={[Function]}
          onDrop={[Function]}
          style={Object {}}
        >
          New Folder
        </div>
      </li>
    </ul>
  </ul>
</article>
`;

exports[`MainEditorAssetTree test drag assetChildrenNode to assetTreeNode test drag folder test drag folder into it's parent's brother folder 1`] = `
<article
  className="wonder-asset-component"
>
  <div
    className="asset-tree"
  >
    <article
      className="wonder-asset-header"
    >
      <div
        className="asset-header-item"
        onClick={[Function]}
        title="add asset"
      >
        <div
          className="item-canBeClick"
        >
          <img
            src="./public/img/add.png"
          />
        </div>
      </div>
      <div
        className="asset-header-item"
        onClick={[Function]}
        title="remove asset"
      >
        <div
          className="item-canBeClick"
        >
          <img
            src="./public/img/remove.png"
          />
        </div>
      </div>
      <div
        className="asset-header-item"
      >
        <div
          className="item-canBeClick"
          title="upload asset"
        >
          <img
            src="./public/img/load.png"
          />
          <input
            className="asset-fileLoad"
            multiple={false}
            onChange={[Function]}
            type="file"
          />
        </div>
      </div>
    </article>
    <article
      className="wonder-asset-assetTree"
    >
      <ul
        className="wonder-tree-node"
      >
        <li>
          <div
            className="item-triangle"
            onMouseDown={[Function]}
          >
            <img
              src="./public/img/down.png"
            />
          </div>
          <img
            className="treeNode-icon"
            src="./public/img/package.png"
          />
          <div
            className="draggable-container"
            draggable={true}
            onClick={[Function]}
            onDragEnd={[Function]}
            onDragEnter={[Function]}
            onDragLeave={[Function]}
            onDragOver={[Function]}
            onDragStart={[Function]}
            onDrop={[Function]}
            style={Object {}}
          >
            Assets
          </div>
        </li>
        <ul
          className="wonder-tree-node"
        >
          <li>
            <div
              className="item-triangle"
              onMouseDown={[Function]}
            >
              <img
                src="./public/img/down.png"
              />
            </div>
            <img
              className="treeNode-icon"
              src="./public/img/package.png"
            />
            <div
              className="draggable-container select-active"
              draggable={true}
              onClick={[Function]}
              onDragEnd={[Function]}
              onDragEnter={[Function]}
              onDragLeave={[Function]}
              onDragOver={[Function]}
              onDragStart={[Function]}
              onDrop={[Function]}
              style={Object {}}
            >
              NoName Folder
            </div>
          </li>
          <ul
            className="wonder-tree-node"
          >
            <li>
              <div
                className="item-triangle"
              />
              <img
                className="treeNode-icon"
                src="./public/img/package.png"
              />
              <div
                className="draggable-container"
                draggable={true}
                onClick={[Function]}
                onDragEnd={[Function]}
                onDragEnter={[Function]}
                onDragLeave={[Function]}
                onDragOver={[Function]}
                onDragStart={[Function]}
                onDrop={[Function]}
                style={Object {}}
              >
                NoName Folder
              </div>
            </li>
          </ul>
        </ul>
        <ul
          className="wonder-tree-node"
        >
          <li>
            <div
              className="item-triangle"
              onMouseDown={[Function]}
            >
              <img
                src="./public/img/down.png"
              />
            </div>
            <img
              className="treeNode-icon"
              src="./public/img/package.png"
            />
            <div
              className="draggable-container"
              draggable={true}
              onClick={[Function]}
              onDragEnd={[Function]}
              onDragEnter={[Function]}
              onDragLeave={[Function]}
              onDragOver={[Function]}
              onDragStart={[Function]}
              onDrop={[Function]}
              style={Object {}}
            >
              NoName Folder 1
            </div>
          </li>
          <ul
            className="wonder-tree-node"
          >
            <li>
              <div
                className="item-triangle"
              />
              <img
                className="treeNode-icon"
                src="./public/img/package.png"
              />
              <div
                className="draggable-container"
                draggable={true}
                onClick={[Function]}
                onDragEnd={[Function]}
                onDragEnter={[Function]}
                onDragLeave={[Function]}
                onDragOver={[Function]}
                onDragStart={[Function]}
                onDrop={[Function]}
                style={Object {}}
              >
                NoName Folder 1
              </div>
            </li>
          </ul>
        </ul>
      </ul>
    </article>
  </div>
  <article
    className="wonder-asset-assetChildren"
  >
    <article
      className="wonder-asset-folderBox"
      id="folder-6"
      style={
        Object {
          "border": "0px",
        }
      }
    >
      <div
        className="item-ground"
        draggable={true}
        onDragEnd={[Function]}
        onDragEnter={[Function]}
        onDragLeave={[Function]}
        onDragOver={[Function]}
        onDragStart={[Function]}
        onDrop={[Function]}
      />
      <div
        className="box-image"
      >
        <img
          src="./public/img/assetPackage.png"
        />
      </div>
      <div
        className="item-text "
      >
        <span>
          NoName Folder
        </span>
      </div>
    </article>
  </article>
</article>
`;

exports[`MainEditorAssetTree test drag assetChildrenNode to assetTreeNode test drag material test drag material file into it's parent's brother folder 1`] = `
<article
  className="wonder-asset-assetChildren"
>
  <article
    className="wonder-asset-fileBox "
    onClick={[Function]}
  >
    <div
      className="box-image"
    >
      <img
        onDragStart={[Function]}
        src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAADIAAAAyCAYAAAAeP4ixAAAGb0lEQVRoQ+2azUsVfRTHj5pvaaGIitTChW5DUHDhC6KCighmGuomwo2I/4aQ4kLFCNuEiGBgtBBRcaGgiLRw4V4oUTDFgohKTX34Ds+5nHvu+c2duRo8xDMwzL3jzL3nc7/n7XfGpK6urmv6C7ak/0H+YyreqiIPHz6k2tpaKi4upuTkZEpKSvJ2vX38+JHW19dpf3//1n6OG4PA+CdPnlBWVpZntAZwwYDg+vqafvz4QW/fvqVPnz7dCCphkPv371N/f79nOO9stDzCOq0K3gOCN7y+urqiN2/eJKxSaJC0tDQaHBykO3fuhIKwXEyC4DVgsA8PD9PZ2VkohUKBlJWVUUNDA6WkpESpIN2JDZYuJc9Z1rE6OLI6S0tL9OHDh8AwgUEaGxvp0aNHURAawM+1XIpICI4bhtnZ2aGFhYVAMIFAoEJYCAtSW8QK3AZMXJCKigqqqqrylNAupRWQxsskwOclCP/q8igVkW62trZGGxsbvsr4ghQVFVFnZ2dMYFu/Np9jAAbX8NJADu7Ly0svyC2F+JqpqSk6Pj52wviCDAwMeBBSDV0r5HuGwD1y5/s57UqA379/E3YLRkLj70NDQ+FBnj17Rvfu3XO6lMuNYHRqamrMjvMc8ACB8RcXF5E9CAyuf/HihQljKlJYWEiPHz/2jPFLtZY7QQncl56eTqg5fLRAzs/PvXqBI0OxWtLNOI7wt+npaTo4OIiBMUH6+vo8I9itZOXW8SGDmiEYICMjg7DjvLUB4NevX97OMFCG4wVHTgAMiL+jYOotBqSgoIDa29vjxkY8NQCQmZnpgbg2GAeInz9/RpTxczGGefnyJX379i3qY2NAuru7CX2UVkMaLtOuDnCowUoABO/9NgaRqrgCn0HghqOjo/4gz58/93w8rFtxkLNbASIsCOKFs5isLzJeAAPQkZERN0h+fj61tbVFUqdV1HT6lXWDs5VUBMHu157ArThOGCRIKp6dnaXDw8MITJRr1dTUUGlpqQli1Q8+BxgoIjMWAKAIjgD0C3YAcPYKkoahyt7eHr17984GQXzgy7mY6bWGlbEYhosejIZ7sYtx+sVnsjJwFfi5TL86a+lKL90LiuH68fFxG6S3t9f7Ba1AD9qWsCoSSNYjXnfogggwjg8LQqZhgODasbExN4hVP6wVoKUOq8Iwuk3BPQzCxrDx7FI4r4uhbCZlPXGC9PT0mIUwKIgMfFZVqitdi7MPDJe7hrAWXXy907UQI4kqIgOfg18eZSsvWw7+hXVrolt67VqAmZiYsF3r6dOnCcWItS7RiUJPU2Rn61qTaBi+h91ycnLSBsHag4NdDxeCLGvZWN0Zu0ZCrlhgAAuElUPWevXqlQ2CHgvpV2YZ7n5ddcRap+tz+DZLEbbCWuq6YDi2UHdev35tg5SXl1NJSUmkRbEqu58y0uBEpijSeJdbMcju7m7U8jeqsmMh1dzcHAVirdMtGA1hqeA327IgLBjOWHNzc/T161dbEZzt6OiIrO4khJWCXW7FENZRtioyHcvzOuXqqo6aI93K+x79WKG+vp7y8vJiVod+iyvtRnogJ5XwU0WPUXUhxN8BcXp6SvPz85I9FgSda0tLS6SeyCLnN3jQruQHwxaEUURWdCx30dJEqWs96EErj8Loyl5+GSyeW4VRRNcaxAem92jh9Wau2aFKU1OTByNHQTxAiJeK48HEWCFOWPHBTSRUmJmZ8dwrEAguqquro5ycHA/GajV00XNlLQmlXYrfB4kNqIEs9f79e/N38B3Qtba2epVeTw2tVaKMCeu1C0LDMJScpPD6BWq4Nl+Q3Nxcb+6rXcwaRHCL7spgljIuCD1WhSutrKzQyclJYiC4q7KykjAiCrpq9ANxwbjqBlfxz58/0+rqql9oxaZf6+rq6movXvQc2DUicqXiqHT570PSeBBfvnyh5eVlXwjv+4I+Z0cfhlEqp2TOYK6KHwQG17AbydesBJ7+bm9vx4UIBYKLMS4CEC9l41V7DWNZZM14ERObm5t0dHQUCCI0CH8qUvPdu3edz02sVOyySPdRmHMtLi4GBohkw6CupT8ZGQ1Ps+Bqss5YjWQ8CHYluBECO5EtcIy4Pjw7O9sDkvXGBaMLHwC+f/9OW1tb3rTxJtuNQeSXQyU8rnvw4EHUf0Do5hC+j0CW64mbQCQcIzf90j9x/60q8icMDPqZfw3IP2F1JSnkGOAPAAAAAElFTkSuQmCC"
      />
    </div>
    <div
      className="item-text "
    >
      <span>
        material1
      </span>
    </div>
  </article>
  <article
    className="wonder-asset-fileBox "
    onClick={[Function]}
  >
    <div
      className="box-image"
    >
      <img
        onDragStart={[Function]}
        src="texture5img"
      />
    </div>
    <div
      className="item-text "
    >
      <span>
        texture5
      </span>
    </div>
  </article>
</article>
`;

exports[`MainEditorAssetTree test drag assetChildrenNode to assetTreeNode test drag texture test drag texture file into it's brother folder 1`] = `
<article
  className="wonder-asset-component"
>
  <div
    className="asset-tree"
  >
    <article
      className="wonder-asset-header"
    >
      <div
        className="asset-header-item"
        onClick={[Function]}
        title="add asset"
      >
        <div
          className="item-canBeClick"
        >
          <img
            src="./public/img/add.png"
          />
        </div>
      </div>
      <div
        className="asset-header-item"
        onClick={[Function]}
        title="remove asset"
      >
        <div
          className="item-canBeClick"
        >
          <img
            src="./public/img/remove.png"
          />
        </div>
      </div>
      <div
        className="asset-header-item"
      >
        <div
          className="item-canBeClick"
          title="upload asset"
        >
          <img
            src="./public/img/load.png"
          />
          <input
            className="asset-fileLoad"
            multiple={false}
            onChange={[Function]}
            type="file"
          />
        </div>
      </div>
    </article>
    <article
      className="wonder-asset-assetTree"
    >
      <ul
        className="wonder-tree-node"
      >
        <li>
          <div
            className="item-triangle"
            onMouseDown={[Function]}
          >
            <img
              src="./public/img/down.png"
            />
          </div>
          <img
            className="treeNode-icon"
            src="./public/img/package.png"
          />
          <div
            className="draggable-container"
            draggable={true}
            onClick={[Function]}
            onDragEnd={[Function]}
            onDragEnter={[Function]}
            onDragLeave={[Function]}
            onDragOver={[Function]}
            onDragStart={[Function]}
            onDrop={[Function]}
            style={Object {}}
          >
            Assets
          </div>
        </li>
        <ul
          className="wonder-tree-node"
        >
          <li>
            <div
              className="item-triangle"
            />
            <img
              className="treeNode-icon"
              src="./public/img/package.png"
            />
            <div
              className="draggable-container"
              draggable={true}
              onClick={[Function]}
              onDragEnd={[Function]}
              onDragEnter={[Function]}
              onDragLeave={[Function]}
              onDragOver={[Function]}
              onDragStart={[Function]}
              onDrop={[Function]}
              style={Object {}}
            >
              NoName Folder
            </div>
          </li>
        </ul>
        <ul
          className="wonder-tree-node"
        >
          <li>
            <div
              className="item-triangle"
              onMouseDown={[Function]}
            >
              <img
                src="./public/img/down.png"
              />
            </div>
            <img
              className="treeNode-icon"
              src="./public/img/package.png"
            />
            <div
              className="draggable-container"
              draggable={true}
              onClick={[Function]}
              onDragEnd={[Function]}
              onDragEnter={[Function]}
              onDragLeave={[Function]}
              onDragOver={[Function]}
              onDragStart={[Function]}
              onDrop={[Function]}
              style={Object {}}
            >
              NoName Folder 1
            </div>
          </li>
          <ul
            className="wonder-tree-node"
          >
            <li>
              <div
                className="item-triangle"
              />
              <img
                className="treeNode-icon"
                src="./public/img/package.png"
              />
              <div
                className="draggable-container select-active"
                draggable={true}
                onClick={[Function]}
                onDragEnd={[Function]}
                onDragEnter={[Function]}
                onDragLeave={[Function]}
                onDragOver={[Function]}
                onDragStart={[Function]}
                onDrop={[Function]}
                style={Object {}}
              >
                NoName Folder
              </div>
            </li>
          </ul>
          <ul
            className="wonder-tree-node"
          >
            <li>
              <div
                className="item-triangle"
              />
              <img
                className="treeNode-icon"
                src="./public/img/package.png"
              />
              <div
                className="draggable-container"
                draggable={true}
                onClick={[Function]}
                onDragEnd={[Function]}
                onDragEnter={[Function]}
                onDragLeave={[Function]}
                onDragOver={[Function]}
                onDragStart={[Function]}
                onDrop={[Function]}
                style={Object {}}
              >
                NoName Folder 1
              </div>
            </li>
          </ul>
        </ul>
      </ul>
    </article>
  </div>
  <article
    className="wonder-asset-assetChildren"
  >
    <article
      className="wonder-asset-fileBox "
      onClick={[Function]}
    >
      <div
        className="box-image"
      >
        <img
          onDragStart={[Function]}
          src="texture5img"
        />
      </div>
      <div
        className="item-text "
      >
        <span>
          texture5
        </span>
      </div>
    </article>
  </article>
</article>
`;

exports[`MainEditorAssetTree test drag assetChildrenNode to assetTreeNode test drag texture test drag texture file into it's parent's brother folder 1`] = `
<article
  className="wonder-asset-assetChildren"
>
  <article
    className="wonder-asset-fileBox "
    onClick={[Function]}
  >
    <div
      className="box-image"
    >
      <img
        onDragStart={[Function]}
        src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAADIAAAAyCAYAAAAeP4ixAAAGb0lEQVRoQ+2azUsVfRTHj5pvaaGIitTChW5DUHDhC6KCighmGuomwo2I/4aQ4kLFCNuEiGBgtBBRcaGgiLRw4V4oUTDFgohKTX34Ds+5nHvu+c2duRo8xDMwzL3jzL3nc7/n7XfGpK6urmv6C7ak/0H+YyreqiIPHz6k2tpaKi4upuTkZEpKSvJ2vX38+JHW19dpf3//1n6OG4PA+CdPnlBWVpZntAZwwYDg+vqafvz4QW/fvqVPnz7dCCphkPv371N/f79nOO9stDzCOq0K3gOCN7y+urqiN2/eJKxSaJC0tDQaHBykO3fuhIKwXEyC4DVgsA8PD9PZ2VkohUKBlJWVUUNDA6WkpESpIN2JDZYuJc9Z1rE6OLI6S0tL9OHDh8AwgUEaGxvp0aNHURAawM+1XIpICI4bhtnZ2aGFhYVAMIFAoEJYCAtSW8QK3AZMXJCKigqqqqrylNAupRWQxsskwOclCP/q8igVkW62trZGGxsbvsr4ghQVFVFnZ2dMYFu/Np9jAAbX8NJADu7Ly0svyC2F+JqpqSk6Pj52wviCDAwMeBBSDV0r5HuGwD1y5/s57UqA379/E3YLRkLj70NDQ+FBnj17Rvfu3XO6lMuNYHRqamrMjvMc8ACB8RcXF5E9CAyuf/HihQljKlJYWEiPHz/2jPFLtZY7QQncl56eTqg5fLRAzs/PvXqBI0OxWtLNOI7wt+npaTo4OIiBMUH6+vo8I9itZOXW8SGDmiEYICMjg7DjvLUB4NevX97OMFCG4wVHTgAMiL+jYOotBqSgoIDa29vjxkY8NQCQmZnpgbg2GAeInz9/RpTxczGGefnyJX379i3qY2NAuru7CX2UVkMaLtOuDnCowUoABO/9NgaRqrgCn0HghqOjo/4gz58/93w8rFtxkLNbASIsCOKFs5isLzJeAAPQkZERN0h+fj61tbVFUqdV1HT6lXWDs5VUBMHu157ArThOGCRIKp6dnaXDw8MITJRr1dTUUGlpqQli1Q8+BxgoIjMWAKAIjgD0C3YAcPYKkoahyt7eHr17984GQXzgy7mY6bWGlbEYhosejIZ7sYtx+sVnsjJwFfi5TL86a+lKL90LiuH68fFxG6S3t9f7Ba1AD9qWsCoSSNYjXnfogggwjg8LQqZhgODasbExN4hVP6wVoKUOq8Iwuk3BPQzCxrDx7FI4r4uhbCZlPXGC9PT0mIUwKIgMfFZVqitdi7MPDJe7hrAWXXy907UQI4kqIgOfg18eZSsvWw7+hXVrolt67VqAmZiYsF3r6dOnCcWItS7RiUJPU2Rn61qTaBi+h91ycnLSBsHag4NdDxeCLGvZWN0Zu0ZCrlhgAAuElUPWevXqlQ2CHgvpV2YZ7n5ddcRap+tz+DZLEbbCWuq6YDi2UHdev35tg5SXl1NJSUmkRbEqu58y0uBEpijSeJdbMcju7m7U8jeqsmMh1dzcHAVirdMtGA1hqeA327IgLBjOWHNzc/T161dbEZzt6OiIrO4khJWCXW7FENZRtioyHcvzOuXqqo6aI93K+x79WKG+vp7y8vJiVod+iyvtRnogJ5XwU0WPUXUhxN8BcXp6SvPz85I9FgSda0tLS6SeyCLnN3jQruQHwxaEUURWdCx30dJEqWs96EErj8Loyl5+GSyeW4VRRNcaxAem92jh9Wau2aFKU1OTByNHQTxAiJeK48HEWCFOWPHBTSRUmJmZ8dwrEAguqquro5ycHA/GajV00XNlLQmlXYrfB4kNqIEs9f79e/N38B3Qtba2epVeTw2tVaKMCeu1C0LDMJScpPD6BWq4Nl+Q3Nxcb+6rXcwaRHCL7spgljIuCD1WhSutrKzQyclJYiC4q7KykjAiCrpq9ANxwbjqBlfxz58/0+rqql9oxaZf6+rq6movXvQc2DUicqXiqHT570PSeBBfvnyh5eVlXwjv+4I+Z0cfhlEqp2TOYK6KHwQG17AbydesBJ7+bm9vx4UIBYKLMS4CEC9l41V7DWNZZM14ERObm5t0dHQUCCI0CH8qUvPdu3edz02sVOyySPdRmHMtLi4GBohkw6CupT8ZGQ1Ps+Bqss5YjWQ8CHYluBECO5EtcIy4Pjw7O9sDkvXGBaMLHwC+f/9OW1tb3rTxJtuNQeSXQyU8rnvw4EHUf0Do5hC+j0CW64mbQCQcIzf90j9x/60q8icMDPqZfw3IP2F1JSnkGOAPAAAAAElFTkSuQmCC"
      />
    </div>
    <div
      className="item-text "
    >
      <span>
        material1
      </span>
    </div>
  </article>
  <article
    className="wonder-asset-fileBox "
    onClick={[Function]}
  >
    <div
      className="box-image"
    >
      <img
        onDragStart={[Function]}
        src="texture5img"
      />
    </div>
    <div
      className="item-text "
    >
      <span>
        texture5
      </span>
    </div>
  </article>
</article>
`;

exports[`MainEditorAssetTree test drag assetChildrenNode to assetTreeNode test no drag 1`] = `
<article
  className="wonder-asset-component"
>
  <div
    className="asset-tree"
  >
    <article
      className="wonder-asset-header"
    >
      <div
        className="asset-header-item"
        onClick={[Function]}
        title="add asset"
      >
        <div
          className="item-canBeClick"
        >
          <img
            src="./public/img/add.png"
          />
        </div>
      </div>
      <div
        className="asset-header-item"
        onClick={[Function]}
        title="remove asset"
      >
        <div
          className="item-notBeClick"
        >
          <img
            src="./public/img/notRemove.png"
          />
        </div>
      </div>
      <div
        className="asset-header-item"
      >
        <div
          className="item-canBeClick"
          title="upload asset"
        >
          <img
            src="./public/img/load.png"
          />
          <input
            className="asset-fileLoad"
            multiple={false}
            onChange={[Function]}
            type="file"
          />
        </div>
      </div>
    </article>
    <article
      className="wonder-asset-assetTree"
    >
      <ul
        className="wonder-tree-node"
      >
        <li>
          <div
            className="item-triangle"
            onMouseDown={[Function]}
          >
            <img
              src="./public/img/down.png"
            />
          </div>
          <img
            className="treeNode-icon"
            src="./public/img/package.png"
          />
          <div
            className="draggable-container select-not-active"
            draggable={true}
            onClick={[Function]}
            onDragEnd={[Function]}
            onDragEnter={[Function]}
            onDragLeave={[Function]}
            onDragOver={[Function]}
            onDragStart={[Function]}
            onDrop={[Function]}
            style={Object {}}
          >
            Assets
          </div>
        </li>
        <ul
          className="wonder-tree-node"
        >
          <li>
            <div
              className="item-triangle"
            />
            <img
              className="treeNode-icon"
              src="./public/img/package.png"
            />
            <div
              className="draggable-container"
              draggable={true}
              onClick={[Function]}
              onDragEnd={[Function]}
              onDragEnter={[Function]}
              onDragLeave={[Function]}
              onDragOver={[Function]}
              onDragStart={[Function]}
              onDrop={[Function]}
              style={Object {}}
            >
              NoName Folder
            </div>
          </li>
        </ul>
        <ul
          className="wonder-tree-node"
        >
          <li>
            <div
              className="item-triangle"
              onMouseDown={[Function]}
            >
              <img
                src="./public/img/down.png"
              />
            </div>
            <img
              className="treeNode-icon"
              src="./public/img/package.png"
            />
            <div
              className="draggable-container"
              draggable={true}
              onClick={[Function]}
              onDragEnd={[Function]}
              onDragEnter={[Function]}
              onDragLeave={[Function]}
              onDragOver={[Function]}
              onDragStart={[Function]}
              onDrop={[Function]}
              style={Object {}}
            >
              NoName Folder 1
            </div>
          </li>
          <ul
            className="wonder-tree-node"
          >
            <li>
              <div
                className="item-triangle"
              />
              <img
                className="treeNode-icon"
                src="./public/img/package.png"
              />
              <div
                className="draggable-container"
                draggable={true}
                onClick={[Function]}
                onDragEnd={[Function]}
                onDragEnter={[Function]}
                onDragLeave={[Function]}
                onDragOver={[Function]}
                onDragStart={[Function]}
                onDrop={[Function]}
                style={Object {}}
              >
                NoName Folder
              </div>
            </li>
          </ul>
          <ul
            className="wonder-tree-node"
          >
            <li>
              <div
                className="item-triangle"
              />
              <img
                className="treeNode-icon"
                src="./public/img/package.png"
              />
              <div
                className="draggable-container"
                draggable={true}
                onClick={[Function]}
                onDragEnd={[Function]}
                onDragEnter={[Function]}
                onDragLeave={[Function]}
                onDragOver={[Function]}
                onDragStart={[Function]}
                onDrop={[Function]}
                style={Object {}}
              >
                NoName Folder 1
              </div>
            </li>
          </ul>
        </ul>
      </ul>
    </article>
  </div>
  <article
    className="wonder-asset-assetChildren"
  >
    <article
      className="wonder-asset-folderBox"
      id="folder-4"
      style={
        Object {
          "border": "0px",
        }
      }
    >
      <div
        className="item-ground"
        draggable={true}
        onDragEnd={[Function]}
        onDragEnter={[Function]}
        onDragLeave={[Function]}
        onDragOver={[Function]}
        onDragStart={[Function]}
        onDrop={[Function]}
      />
      <div
        className="box-image"
      >
        <img
          src="./public/img/assetPackage.png"
        />
      </div>
      <div
        className="item-text "
      >
        <span>
          NoName Folder
        </span>
      </div>
    </article>
    <article
      className="wonder-asset-folderBox"
      id="folder-5"
      style={
        Object {
          "border": "0px",
        }
      }
    >
      <div
        className="item-ground"
        draggable={true}
        onDragEnd={[Function]}
        onDragEnter={[Function]}
        onDragLeave={[Function]}
        onDragOver={[Function]}
        onDragStart={[Function]}
        onDrop={[Function]}
      />
      <div
        className="box-image"
      >
        <img
          src="./public/img/assetPackage.png"
        />
      </div>
      <div
        className="item-text "
      >
        <span>
          NoName Folder 1
        </span>
      </div>
    </article>
  </article>
</article>
`;

exports[`MainEditorAssetTree test drag assetTreeNode to assetTreeNode test has children case have first layer children drag treeNode into brother treeNode 1`] = `
<article
  className="wonder-asset-assetTree"
>
  <ul
    className="wonder-tree-node"
  >
    <li>
      <div
        className="item-triangle"
        onMouseDown={[Function]}
      >
        <img
          src="./public/img/down.png"
        />
      </div>
      <img
        className="treeNode-icon"
        src="./public/img/package.png"
      />
      <div
        className="draggable-container"
        draggable={true}
        onClick={[Function]}
        onDragEnd={[Function]}
        onDragEnter={[Function]}
        onDragLeave={[Function]}
        onDragOver={[Function]}
        onDragStart={[Function]}
        onDrop={[Function]}
        style={Object {}}
      >
        Assets
      </div>
    </li>
    <ul
      className="wonder-tree-node"
    >
      <li>
        <div
          className="item-triangle"
          onMouseDown={[Function]}
        >
          <img
            src="./public/img/down.png"
          />
        </div>
        <img
          className="treeNode-icon"
          src="./public/img/package.png"
        />
        <div
          className="draggable-container select-active"
          draggable={true}
          onClick={[Function]}
          onDragEnd={[Function]}
          onDragEnter={[Function]}
          onDragLeave={[Function]}
          onDragOver={[Function]}
          onDragStart={[Function]}
          onDrop={[Function]}
          style={Object {}}
        >
          NoName Folder
        </div>
      </li>
      <ul
        className="wonder-tree-node"
      >
        <li>
          <div
            className="item-triangle"
          />
          <img
            className="treeNode-icon"
            src="./public/img/package.png"
          />
          <div
            className="draggable-container"
            draggable={true}
            onClick={[Function]}
            onDragEnd={[Function]}
            onDragEnter={[Function]}
            onDragLeave={[Function]}
            onDragOver={[Function]}
            onDragStart={[Function]}
            onDrop={[Function]}
            style={Object {}}
          >
            NoName Folder 1
          </div>
        </li>
      </ul>
    </ul>
  </ul>
</article>
`;

exports[`MainEditorAssetTree test drag assetTreeNode to assetTreeNode test has children case have first layer children no drag 1`] = `
<article
  className="wonder-asset-component"
>
  <div
    className="asset-tree"
  >
    <article
      className="wonder-asset-header"
    >
      <div
        className="asset-header-item"
        onClick={[Function]}
        title="add asset"
      >
        <div
          className="item-canBeClick"
        >
          <img
            src="./public/img/add.png"
          />
        </div>
      </div>
      <div
        className="asset-header-item"
        onClick={[Function]}
        title="remove asset"
      >
        <div
          className="item-notBeClick"
        >
          <img
            src="./public/img/notRemove.png"
          />
        </div>
      </div>
      <div
        className="asset-header-item"
      >
        <div
          className="item-canBeClick"
          title="upload asset"
        >
          <img
            src="./public/img/load.png"
          />
          <input
            className="asset-fileLoad"
            multiple={false}
            onChange={[Function]}
            type="file"
          />
        </div>
      </div>
    </article>
    <article
      className="wonder-asset-assetTree"
    >
      <ul
        className="wonder-tree-node"
      >
        <li>
          <div
            className="item-triangle"
            onMouseDown={[Function]}
          >
            <img
              src="./public/img/down.png"
            />
          </div>
          <img
            className="treeNode-icon"
            src="./public/img/package.png"
          />
          <div
            className="draggable-container select-not-active"
            draggable={true}
            onClick={[Function]}
            onDragEnd={[Function]}
            onDragEnter={[Function]}
            onDragLeave={[Function]}
            onDragOver={[Function]}
            onDragStart={[Function]}
            onDrop={[Function]}
            style={Object {}}
          >
            Assets
          </div>
        </li>
        <ul
          className="wonder-tree-node"
        >
          <li>
            <div
              className="item-triangle"
            />
            <img
              className="treeNode-icon"
              src="./public/img/package.png"
            />
            <div
              className="draggable-container"
              draggable={true}
              onClick={[Function]}
              onDragEnd={[Function]}
              onDragEnter={[Function]}
              onDragLeave={[Function]}
              onDragOver={[Function]}
              onDragStart={[Function]}
              onDrop={[Function]}
              style={Object {}}
            >
              NoName Folder
            </div>
          </li>
        </ul>
      </ul>
    </article>
  </div>
  <article
    className="wonder-asset-assetChildren"
  >
    <article
      className="wonder-asset-folderBox"
      id="folder-4"
      style={
        Object {
          "border": "0px",
        }
      }
    >
      <div
        className="item-ground"
        draggable={true}
        onDragEnd={[Function]}
        onDragEnter={[Function]}
        onDragLeave={[Function]}
        onDragOver={[Function]}
        onDragStart={[Function]}
        onDrop={[Function]}
      />
      <div
        className="box-image"
      >
        <img
          src="./public/img/assetPackage.png"
        />
      </div>
      <div
        className="item-text "
      >
        <span>
          NoName Folder
        </span>
      </div>
    </article>
  </article>
</article>
`;

exports[`MainEditorAssetTree test drag assetTreeNode to assetTreeNode test has children case have second layer children drag third layer first folderNode into root treeNode 1`] = `
<article
  className="wonder-asset-component"
>
  <div
    className="asset-tree"
  >
    <article
      className="wonder-asset-header"
    >
      <div
        className="asset-header-item"
        onClick={[Function]}
        title="add asset"
      >
        <div
          className="item-canBeClick"
        >
          <img
            src="./public/img/add.png"
          />
        </div>
      </div>
      <div
        className="asset-header-item"
        onClick={[Function]}
        title="remove asset"
      >
        <div
          className="item-notBeClick"
        >
          <img
            src="./public/img/notRemove.png"
          />
        </div>
      </div>
      <div
        className="asset-header-item"
      >
        <div
          className="item-canBeClick"
          title="upload asset"
        >
          <img
            src="./public/img/load.png"
          />
          <input
            className="asset-fileLoad"
            multiple={false}
            onChange={[Function]}
            type="file"
          />
        </div>
      </div>
    </article>
    <article
      className="wonder-asset-assetTree"
    >
      <ul
        className="wonder-tree-node"
      >
        <li>
          <div
            className="item-triangle"
            onMouseDown={[Function]}
          >
            <img
              src="./public/img/down.png"
            />
          </div>
          <img
            className="treeNode-icon"
            src="./public/img/package.png"
          />
          <div
            className="draggable-container select-not-active"
            draggable={true}
            onClick={[Function]}
            onDragEnd={[Function]}
            onDragEnter={[Function]}
            onDragLeave={[Function]}
            onDragOver={[Function]}
            onDragStart={[Function]}
            onDrop={[Function]}
            style={Object {}}
          >
            Assets
          </div>
        </li>
        <ul
          className="wonder-tree-node"
        >
          <li>
            <div
              className="item-triangle"
            />
            <img
              className="treeNode-icon"
              src="./public/img/package.png"
            />
            <div
              className="draggable-container"
              draggable={true}
              onClick={[Function]}
              onDragEnd={[Function]}
              onDragEnter={[Function]}
              onDragLeave={[Function]}
              onDragOver={[Function]}
              onDragStart={[Function]}
              onDrop={[Function]}
              style={Object {}}
            >
              a1
            </div>
          </li>
        </ul>
        <ul
          className="wonder-tree-node"
        >
          <li>
            <div
              className="item-triangle"
            />
            <img
              className="treeNode-icon"
              src="./public/img/package.png"
            />
            <div
              className="draggable-container"
              draggable={true}
              onClick={[Function]}
              onDragEnd={[Function]}
              onDragEnter={[Function]}
              onDragLeave={[Function]}
              onDragOver={[Function]}
              onDragStart={[Function]}
              onDrop={[Function]}
              style={Object {}}
            >
              NoName Folder
            </div>
          </li>
        </ul>
        <ul
          className="wonder-tree-node"
        >
          <li>
            <div
              className="item-triangle"
              onMouseDown={[Function]}
            >
              <img
                src="./public/img/down.png"
              />
            </div>
            <img
              className="treeNode-icon"
              src="./public/img/package.png"
            />
            <div
              className="draggable-container"
              draggable={true}
              onClick={[Function]}
              onDragEnd={[Function]}
              onDragEnter={[Function]}
              onDragLeave={[Function]}
              onDragOver={[Function]}
              onDragStart={[Function]}
              onDrop={[Function]}
              style={Object {}}
            >
              NoName Folder 1
            </div>
          </li>
          <ul
            className="wonder-tree-node"
          >
            <li>
              <div
                className="item-triangle"
              />
              <img
                className="treeNode-icon"
                src="./public/img/package.png"
              />
              <div
                className="draggable-container"
                draggable={true}
                onClick={[Function]}
                onDragEnd={[Function]}
                onDragEnter={[Function]}
                onDragLeave={[Function]}
                onDragOver={[Function]}
                onDragStart={[Function]}
                onDrop={[Function]}
                style={Object {}}
              >
                NoName Folder 1
              </div>
            </li>
          </ul>
        </ul>
      </ul>
    </article>
  </div>
  <article
    className="wonder-asset-assetChildren"
  >
    <article
      className="wonder-asset-folderBox"
      id="folder-6"
      style={
        Object {
          "border": "0px",
        }
      }
    >
      <div
        className="item-ground"
        draggable={true}
        onDragEnd={[Function]}
        onDragEnter={[Function]}
        onDragLeave={[Function]}
        onDragOver={[Function]}
        onDragStart={[Function]}
        onDrop={[Function]}
      />
      <div
        className="box-image"
      >
        <img
          src="./public/img/assetPackage.png"
        />
      </div>
      <div
        className="item-text "
      >
        <span>
          a1
        </span>
      </div>
    </article>
    <article
      className="wonder-asset-folderBox"
      id="folder-4"
      style={
        Object {
          "border": "0px",
        }
      }
    >
      <div
        className="item-ground"
        draggable={true}
        onDragEnd={[Function]}
        onDragEnter={[Function]}
        onDragLeave={[Function]}
        onDragOver={[Function]}
        onDragStart={[Function]}
        onDrop={[Function]}
      />
      <div
        className="box-image"
      >
        <img
          src="./public/img/assetPackage.png"
        />
      </div>
      <div
        className="item-text "
      >
        <span>
          NoName Folder
        </span>
      </div>
    </article>
    <article
      className="wonder-asset-folderBox"
      id="folder-5"
      style={
        Object {
          "border": "0px",
        }
      }
    >
      <div
        className="item-ground"
        draggable={true}
        onDragEnd={[Function]}
        onDragEnter={[Function]}
        onDragLeave={[Function]}
        onDragOver={[Function]}
        onDragStart={[Function]}
        onDrop={[Function]}
      />
      <div
        className="box-image"
      >
        <img
          src="./public/img/assetPackage.png"
        />
      </div>
      <div
        className="item-text "
      >
        <span>
          NoName Folder 1
        </span>
      </div>
    </article>
  </article>
</article>
`;

exports[`MainEditorAssetTree test drag assetTreeNode to assetTreeNode test has children case have second layer children no drag 1`] = `
<article
  className="wonder-asset-component"
>
  <div
    className="asset-tree"
  >
    <article
      className="wonder-asset-header"
    >
      <div
        className="asset-header-item"
        onClick={[Function]}
        title="add asset"
      >
        <div
          className="item-canBeClick"
        >
          <img
            src="./public/img/add.png"
          />
        </div>
      </div>
      <div
        className="asset-header-item"
        onClick={[Function]}
        title="remove asset"
      >
        <div
          className="item-notBeClick"
        >
          <img
            src="./public/img/notRemove.png"
          />
        </div>
      </div>
      <div
        className="asset-header-item"
      >
        <div
          className="item-canBeClick"
          title="upload asset"
        >
          <img
            src="./public/img/load.png"
          />
          <input
            className="asset-fileLoad"
            multiple={false}
            onChange={[Function]}
            type="file"
          />
        </div>
      </div>
    </article>
    <article
      className="wonder-asset-assetTree"
    >
      <ul
        className="wonder-tree-node"
      >
        <li>
          <div
            className="item-triangle"
            onMouseDown={[Function]}
          >
            <img
              src="./public/img/down.png"
            />
          </div>
          <img
            className="treeNode-icon"
            src="./public/img/package.png"
          />
          <div
            className="draggable-container select-not-active"
            draggable={true}
            onClick={[Function]}
            onDragEnd={[Function]}
            onDragEnter={[Function]}
            onDragLeave={[Function]}
            onDragOver={[Function]}
            onDragStart={[Function]}
            onDrop={[Function]}
            style={Object {}}
          >
            Assets
          </div>
        </li>
        <ul
          className="wonder-tree-node"
        >
          <li>
            <div
              className="item-triangle"
            />
            <img
              className="treeNode-icon"
              src="./public/img/package.png"
            />
            <div
              className="draggable-container"
              draggable={true}
              onClick={[Function]}
              onDragEnd={[Function]}
              onDragEnter={[Function]}
              onDragLeave={[Function]}
              onDragOver={[Function]}
              onDragStart={[Function]}
              onDrop={[Function]}
              style={Object {}}
            >
              NoName Folder
            </div>
          </li>
        </ul>
        <ul
          className="wonder-tree-node"
        >
          <li>
            <div
              className="item-triangle"
              onMouseDown={[Function]}
            >
              <img
                src="./public/img/down.png"
              />
            </div>
            <img
              className="treeNode-icon"
              src="./public/img/package.png"
            />
            <div
              className="draggable-container"
              draggable={true}
              onClick={[Function]}
              onDragEnd={[Function]}
              onDragEnter={[Function]}
              onDragLeave={[Function]}
              onDragOver={[Function]}
              onDragStart={[Function]}
              onDrop={[Function]}
              style={Object {}}
            >
              NoName Folder 1
            </div>
          </li>
          <ul
            className="wonder-tree-node"
          >
            <li>
              <div
                className="item-triangle"
              />
              <img
                className="treeNode-icon"
                src="./public/img/package.png"
              />
              <div
                className="draggable-container"
                draggable={true}
                onClick={[Function]}
                onDragEnd={[Function]}
                onDragEnter={[Function]}
                onDragLeave={[Function]}
                onDragOver={[Function]}
                onDragStart={[Function]}
                onDrop={[Function]}
                style={Object {}}
              >
                NoName Folder
              </div>
            </li>
          </ul>
          <ul
            className="wonder-tree-node"
          >
            <li>
              <div
                className="item-triangle"
              />
              <img
                className="treeNode-icon"
                src="./public/img/package.png"
              />
              <div
                className="draggable-container"
                draggable={true}
                onClick={[Function]}
                onDragEnd={[Function]}
                onDragEnter={[Function]}
                onDragLeave={[Function]}
                onDragOver={[Function]}
                onDragStart={[Function]}
                onDrop={[Function]}
                style={Object {}}
              >
                NoName Folder 1
              </div>
            </li>
          </ul>
        </ul>
      </ul>
    </article>
  </div>
  <article
    className="wonder-asset-assetChildren"
  >
    <article
      className="wonder-asset-folderBox"
      id="folder-4"
      style={
        Object {
          "border": "0px",
        }
      }
    >
      <div
        className="item-ground"
        draggable={true}
        onDragEnd={[Function]}
        onDragEnter={[Function]}
        onDragLeave={[Function]}
        onDragOver={[Function]}
        onDragStart={[Function]}
        onDrop={[Function]}
      />
      <div
        className="box-image"
      >
        <img
          src="./public/img/assetPackage.png"
        />
      </div>
      <div
        className="item-text "
      >
        <span>
          NoName Folder
        </span>
      </div>
    </article>
    <article
      className="wonder-asset-folderBox"
      id="folder-5"
      style={
        Object {
          "border": "0px",
        }
      }
    >
      <div
        className="item-ground"
        draggable={true}
        onDragEnd={[Function]}
        onDragEnter={[Function]}
        onDragLeave={[Function]}
        onDragOver={[Function]}
        onDragStart={[Function]}
        onDrop={[Function]}
      />
      <div
        className="box-image"
      >
        <img
          src="./public/img/assetPackage.png"
        />
      </div>
      <div
        className="item-text "
      >
        <span>
          NoName Folder 1
        </span>
      </div>
    </article>
  </article>
</article>
`;

exports[`MainEditorAssetTree test show order sort the same layer folder by firstname alphabetically 1`] = `
<article
  className="wonder-asset-assetTree"
>
  <ul
    className="wonder-tree-node"
  >
    <li>
      <div
        className="item-triangle"
        onMouseDown={[Function]}
      >
        <img
          src="./public/img/down.png"
        />
      </div>
      <img
        className="treeNode-icon"
        src="./public/img/package.png"
      />
      <div
        className="draggable-container"
        draggable={true}
        onClick={[Function]}
        onDragEnd={[Function]}
        onDragEnter={[Function]}
        onDragLeave={[Function]}
        onDragOver={[Function]}
        onDragStart={[Function]}
        onDrop={[Function]}
        style={Object {}}
      >
        Assets
      </div>
    </li>
    <ul
      className="wonder-tree-node"
    >
      <li>
        <div
          className="item-triangle"
          onMouseDown={[Function]}
        >
          <img
            src="./public/img/down.png"
          />
        </div>
        <img
          className="treeNode-icon"
          src="./public/img/package.png"
        />
        <div
          className="draggable-container select-active"
          draggable={true}
          onClick={[Function]}
          onDragEnd={[Function]}
          onDragEnter={[Function]}
          onDragLeave={[Function]}
          onDragOver={[Function]}
          onDragStart={[Function]}
          onDrop={[Function]}
          style={Object {}}
        >
          BFolder
        </div>
      </li>
      <ul
        className="wonder-tree-node"
      >
        <li>
          <div
            className="item-triangle"
          />
          <img
            className="treeNode-icon"
            src="./public/img/package.png"
          />
          <div
            className="draggable-container"
            draggable={true}
            onClick={[Function]}
            onDragEnd={[Function]}
            onDragEnter={[Function]}
            onDragLeave={[Function]}
            onDragOver={[Function]}
            onDragStart={[Function]}
            onDrop={[Function]}
            style={Object {}}
          >
            AFolder
          </div>
        </li>
      </ul>
      <ul
        className="wonder-tree-node"
      >
        <li>
          <div
            className="item-triangle"
          />
          <img
            className="treeNode-icon"
            src="./public/img/package.png"
          />
          <div
            className="draggable-container"
            draggable={true}
            onClick={[Function]}
            onDragEnd={[Function]}
            onDragEnter={[Function]}
            onDragLeave={[Function]}
            onDragOver={[Function]}
            onDragStart={[Function]}
            onDrop={[Function]}
            style={Object {}}
          >
            ZFolder
          </div>
        </li>
      </ul>
    </ul>
    <ul
      className="wonder-tree-node"
    >
      <li>
        <div
          className="item-triangle"
        />
        <img
          className="treeNode-icon"
          src="./public/img/package.png"
        />
        <div
          className="draggable-container"
          draggable={true}
          onClick={[Function]}
          onDragEnd={[Function]}
          onDragEnter={[Function]}
          onDragLeave={[Function]}
          onDragOver={[Function]}
          onDragStart={[Function]}
          onDrop={[Function]}
          style={Object {}}
        >
          FFolder
        </div>
      </li>
    </ul>
  </ul>
</article>
`;
